--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -64,3 +64,12 @@
   author={Einstein, A.},
   year={1905}
 }
+
+@inproceedings{zhang2019cascaded,
+  title={Cascaded Generative and Discriminative Learning for Microcalcification Detection in Breast Mammograms},
+  author={Zhang, Fandong and Luo, Ling and Sun, Xinwei and Zhou, Zhen and Li, Xiuli and Yu, Yizhou and Wang, Yizhou},
+  booktitle={Proceedings of the IEEE Conference on Computer Vision and Pattern Recognition},
+  pages={12578--12586},
+  year={2019},
+  pdf={http://openaccess.thecvf.com/content_CVPR_2019/papers/Zhang_Cascaded_Generative_and_Discriminative_Learning_for_Microcalcification_Detection_in_Breast_CVPR_2019_paper.pdf}
+}
