--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -9,7 +9,8 @@
   pages={1003--1013},
   year={2021},
   organization={IEEE},
-  pdf={https://rowl1ng.com/assets/pdf/3DV_VRSketch_21.pdf}
+  pdf={https://rowl1ng.com/assets/pdf/3DV_VRSketch_21.pdf},
+  selected={true}
 }
 
 @inproceedings{luo2020towards,
@@ -19,7 +20,8 @@
   pages={81--90},
   year={2020},
   organization={IEEE},
-  pdf={https://rowl1ng.com/assets/pdf/3DV_VRSketch.pdf}
+  pdf={https://rowl1ng.com/assets/pdf/3DV_VRSketch.pdf},
+  selected={true}
 }
 
 @inproceedings{zhang2019cascaded,
@@ -28,5 +30,6 @@
   booktitle={Proceedings of the IEEE Conference on Computer Vision and Pattern Recognition},
   pages={12578--12586},
   year={2019},
-  pdf={http://openaccess.thecvf.com/content_CVPR_2019/papers/Zhang_Cascaded_Generative_and_Discriminative_Learning_for_Microcalcification_Detection_in_Breast_CVPR_2019_paper.pdf}
+  pdf={http://openaccess.thecvf.com/content_CVPR_2019/papers/Zhang_Cascaded_Generative_and_Discriminative_Learning_for_Microcalcification_Detection_in_Breast_CVPR_2019_paper.pdf},
+  selected={true}
 }
