--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,19 @@
 ---
 ---
 
+@inproceedings{luo2022,
+  title = {Structure-Aware 3D VR Sketch to 3D Shape Retrieval},
+  author = {Luo, Ling and Gryaditskaya, Yulia and Xiang, Tao and Song, Yi-Zhe},
+  booktitle={2021 International Conference on 3D Vision (3DV)},
+  year={2022},
+  arxiv={https://arxiv.org/abs/2209.09043},
+  supp={https://drive.google.com/file/d/11rt_fVuqumWUy_jVMAis4di4KW0bRHJr/view?usp=sharing},
+  code={},
+  poster={},
+  video={},
+  abbr={3DV},
+  selected={true}
+}
 
 @inproceedings{luo2021fine,
   title={Fine-Grained VR Sketching: Dataset and Insights.},
@@ -9,7 +22,11 @@
   pages={1003--1013},
   year={2021},
   organization={IEEE},
-  pdf={https://rowl1ng.com/assets/pdf/3DV_VRSketch_21.pdf},
+  arxiv={https://arxiv.org/abs/2209.10008},
+  supp={https://drive.google.com/file/d/1JXGO1s8pyT7YR26zruDevJwO2XJ4MAE1/view?usp=sharing},
+  code={},
+  website={},
+  abbr={3DV},
   selected={true}
 }
 
@@ -20,7 +37,11 @@
   pages={81--90},
   year={2020},
   organization={IEEE},
-  pdf={https://rowl1ng.com/assets/pdf/3DV_VRSketch.pdf},
+  arxiv={https://arxiv.org/abs/2209.10020},
+  supp={https://drive.google.com/file/d/1nm8Taxc4Ji8iHdcjljygEh3v2yIdmbsO/view?usp=sharing},
+  code={},
+  preview={3DV20.gif},
+  abbr={3DV},
   selected={true}
 }
 
@@ -31,5 +52,17 @@
   pages={12578--12586},
   year={2019},
   pdf={http://openaccess.thecvf.com/content_CVPR_2019/papers/Zhang_Cascaded_Generative_and_Discriminative_Learning_for_Microcalcification_Detection_in_Breast_CVPR_2019_paper.pdf},
+  abbr={CVPR},
   selected={true}
+}
+
+@inproceedings{liu2019unilateral,
+  title={From unilateral to bilateral learning: Detecting mammogram masses with contrasted bilateral network},
+  author={Liu, Yuhang and Zhou, Zhen and Zhang, Shu and Luo, Ling and Zhang, Qianyi and Zhang, Fandong and Li, Xiuli and Wang, Yizhou and Yu, Yizhou},
+  booktitle={International Conference on Medical Image Computing and Computer-Assisted Intervention},
+  pages={477--485},
+  year={2019},
+  pdf={https://link.springer.com/chapter/10.1007/978-3-030-32226-7_53},
+  organization={Springer},
+  abbr={MICCAI}
 }
