--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,17 @@
 ---
 ---
 
+@inproceedings{luo20233d,
+  abbr={ICCV},
+  title={3D VR Sketch Guided 3D Shape Prototyping and Exploration},
+  author={Luo, Ling and Chowdhury, Pinaki Nath and Xiang, Tao and Song, Yi-Zhe and Gryaditskaya, Yulia},
+  booktitle={Proceedings of the IEEE/CVF International Conference on Computer Vision},
+  pages={9267--9276},
+  year={2023},
+  pdf={https://openaccess.thecvf.com/content/ICCV2023/papers/Luo_3D_VR_Sketch_Guided_3D_Shape_Prototyping_and_Exploration_ICCV_2023_paper.pdf},
+  selected={true}
+}
+
 @inproceedings{luo2022,
   title = {Structure-Aware 3D VR Sketch to 3D Shape Retrieval},
   author = {Luo, Ling and Gryaditskaya, Yulia and Xiang, Tao and Song, Yi-Zhe},
@@ -36,6 +47,7 @@
 }
 
 @inproceedings{luo2020towards,
+  abbr={3DV},
   title={Towards 3D VR-sketch to 3D shape retrieval},
   author={Luo, Ling and Gryaditskaya, Yulia and Yang, Yongxin and Xiang, Tao and Song, Yi-Zhe},
   booktitle={2020 International Conference on 3D Vision (3DV)},
@@ -49,8 +61,7 @@
   code={https://github.com/ygryadit/Towards3DVRSketch},
   video={https://youtu.be/7cdij0rSOaE},
   poster={https://drive.google.com/file/d/1ZUzV2QIHcsePXaJbzKb-KdNzzGpAWTR6/view?usp=sharing},
-  preview={3DV20.gif},
-  abbr={3DV},
+  img ={../assets/img/publication_preview/3DV20.gif},
   selected={true}
 }
 
