--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -9,6 +9,13 @@
   pages={9267--9276},
   year={2023},
   pdf={https://openaccess.thecvf.com/content/ICCV2023/papers/Luo_3D_VR_Sketch_Guided_3D_Shape_Prototyping_and_Exploration_ICCV_2023_paper.pdf},
+  code={https://github.com/Rowl1ng/3Dsketch2shape},
+  video={https://www.youtube.com/watch?v=PCig106t7aM&ab_channel=LingLuo},
+  slides={https://drive.google.com/file/d/1HewX7cbp8YTOA0G7b_OsOTolpwIRnS_d/view?usp=sharing},
+  poster={https://drive.google.com/file/d/1xTWyCWziSBq7fwTV5EiCird3_DSmu3xs/view?usp=sharing},
+  img={../assets/img/publication_preview/interp_98.gif},
+  abstract={3D shape modeling is labor-intensive and time-consuming and requires years of expertise. Recently, 2D sketches and text inputs were considered as conditional modalities to 3D shape generation networks to facilitate 3D shape modeling. However, text does not contain enough fine-grained information and is more suitable to describe a category or appearance rather than geometry, while 2D sketches are ambiguous, and depicting complex 3D shapes in 2D again requires extensive practice. Instead, we explore virtual reality sketches that are drawn directly in 3D. We assume that the sketches are created by novices, without any art training, and aim to reconstruct physically-plausible 3D shapes. Since such sketches are potentially ambiguous, we tackle the problem of the generation of multiple 3D shapes that follow the input sketch structure. Limited in the size of the training data, we carefully design our method, training the model step-by-step and leveraging multi-modal 3D shape representation. To guarantee the plausibility of generated 3D shapes we leverage the normalizing flow that models the distribution of the latent space of 3D shapes. To encourage the fidelity of the generated 3D models to an input sketch, we propose a dedicated loss that we deploy at different stages of the training process.},
+  arxiv={2306.10830},
   selected={true}
 }
 
@@ -42,6 +49,7 @@
   poster={https://drive.google.com/file/d/1uMKKy-5-uf1p9kY-WM74mORR0fV-ZCah/view?usp=sharing},
   code={https://github.com/Rowl1ng/Fine-Grained_VR_Sketching},
   website={https://cvssp.org/data/VRChairSketch},
+  img={../assets/img/publication_preview/3D_sketch.gif},
   abbr={3DV},
   selected={true}
 }
